# marmelab

./: .gitignore  Dockerfile  LICENSE  README.md  app.spec  pyproject.toml  real_tests_list.py
Results/: meas1_2023-04-21.csv  meas1_2023-04-22.csv  meas2_2023-04-22.csv  res1_2023-04-26.csv  res1_2023-04-27.csv  res1_2023-05-03.csv  res1_2023-05-04.csv  res2_2023-04-26.csv  res2_2023-04-27.csv  res2_2023-05-03.csv  res3_2023-04-27.csv  res3_2023-05-03.csv  res4_2023-04-27.csv  res4_2023-05-03.csv  res5_2023-04-27.csv  res6_2023-04-27.csv
TRIM/: TRIM.py  TRIM_emulator.py  __init__.py
analyzator/: analyzator_parameters.py  base_analyzator.py
analyzator/rohde_schwarz/: rohde_schwarz.py
docker/: caption.txt
pyqt_app/: CentralWidgets.py  LogWidget.py  MainWindow.py  MainWindow_class.py  Main_window_class_test.py  RightWidgets.py  TableWidgets.py  __init__.py  app.py  app_project.py  app_test.py  config.yml  cylinder.m3d  data.xlsx  description.txt  draft.py  kek  kjkjkj  logs  meas1.csv  meas12023-04-21.csv  meas1_2023-04-21.csv  nkj  test_file.py
pyqt_app/CentralWidgets/: Init.py  QSmartTable.py  RoomSettings.py  ScannerControl.py  ScannerSettings.py  Test.py  __init__.py
pyqt_app/PAnalyzers/: rohde_schwarz.py
pyqt_app/PScanners/: TRIM.py  __init__.py
pyqt_app/PVisualizers/: Graphs.py  ScannerVisualizer.py
pyqt_app/Panels/: BarPanel.py  BasePanel.py  CentralPanel.py  LeftPanel.py  LogPanel.py  LogWidget.py  MenuPanel.py  RightPanel.py  ToolPanel.py  __init__.py
src/: ModelView.py  Project.py  Variable.py  __init__.py  binds.py  builder.py  classes_draft.ipynb  description.txt  interfaces.py  matmul.py  scanner.py  scanner_utils.py
tests/: TRIM_emulator.py  conftest.py  test_TRIM.py  test_db.db  test_src_scanner.py  test_toy.py
ui_ux/: description.txt
(+111 files in other folders)
