[tool.poetry]
name = "itmo-proj-fall-pt"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
license = "MIT"

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
