[tool.poetry]
name = "itmo-proj-fall-pt"
version = "0.1.0"
description = ""
authors = ["Новый ФизТех <edu@physics.itmo.ru>"]
readme = "README.md"
license = "MIT"
packages = [
    {include = "src"},
    {include = "TRIM"}
]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.3.1"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = 'tests.TRIM_emulator:run'
app = 'pyqt_app.app'